# memAgentDemo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  WORK_PLAN.md  claude_scaffolding_checklist.md  implicit_decision.md  pyproject.toml  repo_scaffolding_build.md  work_plan.md  work_plan_persona_shared_memory.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  e2e-tests.yml  letta-integration.yml  publish.yml
agent_work/: pr_notes_to_fix
agent_work/notebooks/: agent_playground.ipynb
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  db_init.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/agent/tools/: __init__.py  audience.py  datasets.py  geo.py  journeys.py  letta_tools.py  mock_data.py  performance.py  persona_tools.py  place_insights.py  placer_tools.py  places.py  repository.py  schemas.py  trade_area.py  utils.py
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 20240214_create_users.py  5622bdf1f536_change_message_role_to_enum.py  v001_create_users.py  v002_create_conversations_and_messages.py  v003_add_message_metadata.py  v003_change_message_role_to_enum.py  v003_conversation_document_model.py  v004_add_user_memory_document.py  v004_conversation_document_model.py  v004_create_persona_taxonomy.py  v004_create_personas.py  v005_add_letta_agent_id.py  v005_add_letta_agent_id_to_user.py  v006_seed_personas.py  v007_drop_role_and_persona_handle.py
backend/app/: __init__.py  config.py  main.py
backend/app/agent/tools/: base.py  memory_tools.py  placer_tools.py  user_memory_tools.py
backend/app/agents/: README.md  __init__.py  backend.py  base.py  config.py  evals.py  generalist_analyst.py  orchestrator.py  profiles.py  routing.py  routing_agent.py  schemas.py  service.py  specialized_analyst.py
backend/app/api/: auth.py  chat.py  deps.py  health.py  letta.py  memory.py  routes.py
backend/app/core/: agent_config.py  config.py  letta_client.py  llm_types.py  pi_agent_base.af  security.py  utils.py
backend/app/core/templates/: pi_agent_base.af
backend/app/crud/: conversation.py  message.py  persona.py  user.py
backend/app/db/: base.py  events.py  persona_loader.py  persona_seeds.py  seed.py  session.py
backend/app/models/: __init__.py  conversation.py  memory.py  message.py  persona.py  types.py  user.py  user_persona_bridge.py
backend/app/schemas/: auth.py  chat.py  letta.py  memory.py  user.py
backend/app/services/: agent_service.py  conversation_retrieval.py  persona_service.py  persona_sync.py  pi_agent.py
backend/tests/: README.md  __init__.py  conftest.py  test_agent_basic.py  test_agent_memory.py  test_agent_robustness.py  test_agent_tools.py  test_agent_user_memory.py  test_agents.py  test_auth_chat.py  test_conversation_document.py  test_conversation_retrieval.py  test_health.py  test_letta_integration.py  test_memory_tool.py  test_tools.py  test_user_memory_tool.py
backend/tests/fixtures/: memory_seeds.py
backend/tests/letta/: conftest.py  test_letta_integration.py  test_minimal_attach.py  test_persona_edge_cases.py  test_persona_integration.py  test_persona_lifecycle.py  test_persona_seed.py  test_persona_service.py  test_persona_tools.py  test_pi_agents.py  test_shared_memory.py
backend/tests/unit/: test_agent_config.py  test_db_models.py  test_health.py  test_letta_api.py  test_persona_relationships.py  test_user_memory_crud.py  test_user_memory_model.py  test_utils.py
common/: README.md
common/clients/: openapi-spec.yaml
common/schemas/: agent-tools.schema.json  memory.schema.json
docs/: ARCHITECTURE_SUMMARY.md  codex_scaffolding_task_eval.md  development_plan.md  human_decisions.md  human_scratchpad.md  implicit_decisions.md  task_definition.md
docs/agentic_work/: anthropic_streaming_migration.md  fix_ci_failures.md  memory_retrieval_tool_for_agent.md  migrate_conversations_and_messages_to_docs.md  react_orchestration_loop.md  repo_scaffolding_build.md  tool_visibility_fix.md  user_memory_plan.md
docs/agentic_work/anthropic_chat_p1/: phase1plan.md
docs/claude_docs/: get-started.md  intro.md
docs/claude_docs/about-claude/: model-deprecations.md  pricing.md
docs/deliverables/: 00_presentation.md  01_problem_analysis.md  02_03_solution_options_and_recommended_approach.md  open_items.md  problem_analysis.md  solution_options.md  solution_options_and_recommended_approach.md
e2e/: README.md  package.json  playwright.config.demo.ts  playwright.config.ts  pnpm-lock.yaml
e2e/demos/: run-demo-daniel-debug.spec.skip.ts  run-demo-daniel.spec.ts
e2e/tests/: chat.spec.ts  conversation-history.spec.ts  login.spec.ts
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/api/: client.ts
infra/: docker-compose.dev.yml  docker-compose.yml  init-db.sql  init-letta.py
scripts/: setup_test_env.sh  wait_for_services.sh
(+188 files in other folders)
