[tool.poetry]
name = "memagentdemo-backend"
version = "0.1.0"
description = "Backend service for memAgentDemo"
authors = ["memAgent Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic-settings = "^2.3.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg = { extras = ["binary"], version = "^3.1.19" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
ruff = "^0.4.8"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
