[tool.poetry]
name = "memagentdemo-backend"
version = "0.1.0"
description = "Backend service for memAgentDemo"
authors = ["memAgent Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }, { include = "agent" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic-settings = "^2.3.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
aiosqlite = "^0.20.0"
letta-client = "^0.1.324"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
ruff = "^0.4.8"
openai = "^2.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
